Home page heading colors contrast fix

--- a/css/index.css
+++ b/css/index.css
@@ -611,7 +611,7 @@ label {
 }
 
 .promoted-articles__content {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 1.0);
   bottom: 0rem;
   color: color: rgba(255, 255, 255, 1.0);
   padding-left: 3rem;
